<resources>
    <string name="app_name">ArbitrarilyTong Settings</string>
    <string name="action_settings">Settings</string>


    <string name="title_update">Update</string>
    <!-- Strings used for fragments for navigation -->

    <string name="tong_version_text">ArbitrarilyTong Version</string>
    <string name="summary">ArbitrarilyTong Settings</string>
    <string name="kernel_version_text">Kernel Version</string>
    <string name="update_su_title">Kernel Updater</string>
    <string name="download_list_text">Download list</string>

    <!-- Update -->
    <string name="releases_info_url" translatable="false">https://ghproxy.com/https://raw.githubusercontent.com/ArbitrarilyTong-infra/ArbitrarilyTong.github.io/main/Update/kernels.json</string>
    <string name="update_version">Version: %1$s</string>
    <string name="update_date">Last update: %1$s</string>
    <string name="update_title" translatable="false">%1$s</string>
    <string name="update_size">Size: %1$s</string>
    <string name="update_extra" translatable="false">%1$s: %2$s</string>
    <string name="update_desc">Update infos: \n%1$s</string>
    <string name="update_desc_none">No more infos.</string>

    <!-- ToolBar -->
    <string name="text_refresh">Refresh</string>
    <string name="text_install_local">Install from local</string>
    <string name="text_preference">Preference</string>
</resources>