<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp"
        android:layout_marginTop="15dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/linearLayout"
                    app:layout_constraintEnd_toStartOf="@+id/update_info">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        >

                    <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/tong"
                            android:id="@+id/imageView"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="24dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/updateTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/update_title"
                            android:textColor="?android:attr/colorAccent"
                            android:textSize="18sp" />

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginStart="5dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/updateVersion"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/update_version"
                                    android:textColor="?android:attr/colorAccent"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/updateDate"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/update_date"
                                    android:textColor="?android:attr/colorAccent"
                                    android:textSize="12sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginStart="5dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/updateSize"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/update_size"
                                    android:textColor="?android:attr/colorAccent"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/updateExtra"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/update_extra"
                                    android:textColor="?android:attr/colorAccent"
                                    android:textSize="12sp" />
                            </LinearLayout>

                        </TableRow>

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                        android:id="@+id/updateDesc"
                        android:text="@string/update_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="25dp"
                        android:paddingEnd="0dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"/>

            </LinearLayout>

            <View
                    android:layout_width="3dp"
                    android:layout_height="0dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/update_info"/>

            <ImageButton
                    android:id="@+id/update_info"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:maxWidth="50dp"
                    android:maxHeight="50dp"
                    app:srcCompat="@drawable/baseline_info"
                    style="@style/Widget.AppCompat.ImageButton"
                    tools:layout_editor_absoluteY="0dp"
                    app:layout_constraintEnd_toStartOf="@+id/update_download"/>

            <ImageButton
                    android:id="@+id/update_download"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:background="@null"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:maxWidth="50dp"
                    android:maxHeight="50dp"
                    android:layout_marginEnd="5dp"
                    app:srcCompat="@drawable/baseline_download"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/Widget.AppCompat.ImageButton"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>